--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,20 +1,20 @@
-@use '../constants/typography';
+@use '../constants/typography' as *;
 
 * {
   margin: 0;
-  font-family: typography.$font-main;
+  font-family: $font-main;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
 
 html {
-  font-family: typography.$font-main;
-  font-size: typography.$font-size-16;
+  font-family: $font-main;
+  font-size: $font-size-16;
 }
 
 body {
-  font-family: typography.$font-main;
+  font-family: $font-main;
 }
 
 h1 {
