🚧 Adjust progress bar

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,5 +14,9 @@
 @use './mixins/positions';
 @use './mixins/flexbox';
 
+// components
+@use './components/progress-bar';
+
 // layouts
 @use './layouts/home';
+@use './layouts/layout';
