💄 Update progress bar to show test completion based on current question

--- a/src/styles/components/_progress-bar.scss
+++ b/src/styles/components/_progress-bar.scss
@@ -11,7 +11,8 @@
 
   &-gauge {
     @include pos-center-y;
-    margin-left: 5%;
+    left: 0;
+    transition: left 300ms ease-in-out;
 
     & img {
       display: block;
